# tradingTools

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
config/: settings.yaml
config/strategies/: vix_uvxy_put.yaml
models/: Dockerfile  config.py  conformal.py  data.py  evaluate.py  features.py  options.py  predict.py  requirements.txt  train.py
models/artifacts/: conformal.json
models/artifacts/ag_model_compact/: learner.pkl  metadata.json  predictor.pkl
models/artifacts/ag_model_compact/models/: trainer.pkl
models/artifacts/ag_model_compact/models/CatBoost_BAG_L1_FULL/: model.pkl
models/artifacts/ag_model_compact/models/LightGBMXT_BAG_L1_FULL/: model.pkl
models/artifacts/ag_model_compact/models/LightGBM_BAG_L1_FULL/: model.pkl
models/artifacts/ag_model_compact/models/NeuralNetTorch_BAG_L1_FULL/: model.pkl
src/strategylab/: __init__.py  cli.py  config.py
src/strategylab/backtest/: __init__.py  engine.py  metrics.py  param_sweep.py  report.py
src/strategylab/core/: __init__.py  base_strategy.py  models.py  registry.py
src/strategylab/data/: __init__.py  cache.py  fetcher.py  options.py  options_chain.py  qc_fetcher.py
src/strategylab/monitor/: __init__.py  alert.py  scheduler.py  watcher.py
src/strategylab/strategies/: __init__.py
src/strategylab/strategies/vix_uvxy_put/: __init__.py  exits.py  position.py  signals.py  strategy.py
tests/: test_alert.py  test_backtest_engine.py  test_options.py  test_options_chain.py
tests/strategies/: test_vix_uvxy_put.py
(+9 files in other folders)
